--- a/src/containers/pageContainer/pageContainer.module.css
+++ b/src/containers/pageContainer/pageContainer.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     background: var(--background-main-color);
     position: relative;
+    padding-top: 98px;
 }
 
 .footer {
