--- a/src/app/landing/landing.module.css
+++ b/src/app/landing/landing.module.css
@@ -1,6 +1,6 @@
 .h1 {
     color: white;
-    font-size: 64px;
+    font-size: 3rem;
     font-weight: 400;
     display: inline;
 }
@@ -15,7 +15,7 @@
 
 .p {
     text-align: center;
-    font-size: 24px;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -36,4 +36,18 @@
     position: absolute;
     bottom: 0;
     left: '50%';
+    z-index: 9;
+    background: none;
+    outline: none;
+    border: none;
+    animation: moveUpDown 2s linear infinite;
 }
+
+@keyframes moveUpDown {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+   }
