--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background-main-color: linear-gradient(113deg, #222 0%, #3F3F3F 100.75%);
   --background-navbar-color: linear-gradient(180deg, #222 0%, rgba(34, 34, 34, 0.00) 100%);
+  --background-card-color: radial-gradient(128.83% 143.13% at 0% 0%, rgba(8, 0, 16, 0.61) 0%, rgba(63, 63, 63, 0.50) 49.76%, rgba(10, 0, 23, 0.31) 100%);
   --text-main-color: linear-gradient(90deg, #8967AB 53.65%, #523CDB 88.49%);
   --text-secondary-color: linear-gradient(90deg, #8B8B8B 0%, #656565 100%);
 }
@@ -13,7 +14,6 @@
 
 html,
 body {
-  scroll-behavior: smooth;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -21,4 +21,25 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  text-align: center;
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+  background: var(--text-secondary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.upDown {
+  transition: transform 0.3s ease-in-out;
+}
+
+.upDown:hover {
+  transform: translateY(-5px);
 }
