--- a/src/containers/pageContainer/pageContainer.module.css
+++ b/src/containers/pageContainer/pageContainer.module.css
@@ -1,23 +1,10 @@
 .container {
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background: var(--background-main-color);
     position: relative;
     padding-top: 98px;
-}
-
-.footer {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
 }
