--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
   --background-main-color: linear-gradient(113deg, #222 0%, #3F3F3F 100.75%);
   --background-navbar-color: linear-gradient(180deg, #222 0%, rgba(34, 34, 34, 0.00) 100%);
   --background-card-color: radial-gradient(128.83% 143.13% at 0% 0%, rgba(8, 0, 16, 0.61) 0%, rgba(63, 63, 63, 0.50) 49.76%, rgba(10, 0, 23, 0.31) 100%);
-  --text-main-color: linear-gradient(90deg, #8967AB 53.65%, #523CDB 88.49%);
+  --text-main-color: linear-gradient(94deg, #8967AB 6.53%, #6D51C4 21.62%, #6843DC 33.12%, #5841E8 44.63%, #6843DC 56.13%, #6B4FC6 67.17%, #7C64BE 77.75%, #8967AB 90.18%, #8967AB 90.19%);
+  --text-title_color: linear-gradient(274deg, #5841E8 11.09%, #6843DC 22.08%, #6849CB 33.5%, #6851B5 45.34%, #6E54C1 54.65%, #7C64BE 65.22%, #8E68B4 77.06%, #8967AB 87.98%, #8967AB 87.98%);
   --text-secondary-color: linear-gradient(90deg, #8B8B8B 0%, #656565 100%);
 }
 
@@ -16,6 +17,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: rgb(63, 63, 63, 0.8) rgba(122, 124, 126);
 }
 
 a {
@@ -29,6 +32,7 @@ p {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  transition: all 0.5s linear;
 
   background: var(--text-secondary-color);
   background-clip: text;
@@ -42,4 +46,31 @@ p {
 
 .upDown:hover {
   transform: translateY(-5px);
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(122, 124, 126, 0.6);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(63, 63, 63, 0.8);
+}
+
+::-webkit-scrollbar-track:hover {
+  background: rgba(122, 124, 126);
+}
+
+::-webkit-scrollbar-track:hover ::-webkit-scrollbar-track {
+  background: rgb(63, 63, 63);
+}
+
+@media (max-width: 768px) {
+  p {
+    font-size: 1rem;
+  }
 }
