--- a/src/components/title/title.module.css
+++ b/src/components/title/title.module.css
@@ -1,11 +1,11 @@
 .h2 {
     text-align: center;
-    font-size: 40px;
+    font-size: 1.6rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 
-    background: var(--text-main-color);
+    background: var(--text-title_color);
     background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
