--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -41,6 +41,27 @@
     outline: none;
     border: none;
     margin-bottom: 22px;
+    color: #8B8B8B;
+}
+
+.div_image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.div_social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.p_social {
+    font-size: 0.8rem;
 }
 
 .textarea {
