--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --background-main-color: linear-gradient(113deg, #222 0%, #3F3F3F 100.75%);
-  --background-navbar-color: linear-gradient(180deg, #222 0%, rgba(34, 34, 34, 0.00) 100%);
+  --background-main-color: linear-gradient(113deg, #070707 0%, #1B1B1B 100.75%);
+  --background-navbar-color: linear-gradient(180deg, #070707 0%, rgba(34, 34, 34, 0.00) 100%);
   --background-card-color: radial-gradient(128.83% 143.13% at 0% 0%, rgba(8, 0, 16, 0.61) 0%, rgba(63, 63, 63, 0.50) 49.76%, rgba(10, 0, 23, 0.31) 100%);
   --text-main-color: linear-gradient(94deg, #8967AB 6.53%, #6D51C4 21.62%, #6843DC 33.12%, #5841E8 44.63%, #6843DC 56.13%, #6B4FC6 67.17%, #7C64BE 77.75%, #8967AB 90.18%, #8967AB 90.19%);
   --text-title_color: linear-gradient(274deg, #5841E8 11.09%, #6843DC 22.08%, #6849CB 33.5%, #6851B5 45.34%, #6E54C1 54.65%, #7C64BE 65.22%, #8E68B4 77.06%, #8967AB 87.98%, #8967AB 87.98%);
