--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -13,6 +13,7 @@
     position: relative;
     transition: transform 0.3s ease-out;
     z-index: 2;
+    border: 1px solid #656565;
 }
 
 .card_container:hover{
@@ -25,7 +26,7 @@
     content: "";
     left: 0px;
     top: 0px;
-    background: radial-gradient(800px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.06), transparent 40%);
+    background: radial-gradient(800px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.12), transparent 40%);
     position: absolute;
     opacity: 0;
     transition: opacity 500ms;
